# 03-dev-patraldo-dj-sv-po

./: .dockerignore  .gitignore  Dockerfile  commit.sh  fly.toml  pyproject.toml
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: .App.svelte.swp  .main.js.swp  App.svelte  main.js
myapp/: settings.py  urls.py
myapp/spa/: apps.py  views.py
myapp/static/frontend/: bundle.js  bundle.js.map
myapp/templates/spa/: index.html
