[tool.poetry]
name = "django-svelte-poetry-fly"
version = "0.1.0"
description = ""
authors = ["Chef <cheftech@patraldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
